@@ -13,7 +13,7 @@
  * You should have received a copy of the GNU General Public License along
  * with this program.  If not, see <http://www.gnu.org/licenses/>.
  *
- * Author: Ted Gould <ted@canonical.com>
+ * Author: Mike Gabriel <mike.gabriel@das-netzwerkteam.de>
  */
 
 #include <stdlib.h>
